@@ -10,6 +10,8 @@ Changes from 0.8-0 to 0.9-0
 
 3.  Started to add plotmath support (outputs MathML).
 
+4.  Changed x11() to dev.new() in tests/*.R code.
+
 
 Changes from 0.7-0 to 0.8-0
 ===========================
